--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,20 @@
         <tfoot>
         </tfoot>
     </table>
-    <script src="js/index.js"></script>
+    <script src="js/app/models/Negociacao.js"></script>
+    <script>
+
+        let n1 = new Negociacao(new Date(), 5, 700);
+        console.log(n1);
+
+        /* não funcionará porque o objeto está congelado */
+        n1._quantidade = 100000000000;
+
+        console.log(n1.data);
+        console.log(n1.quantidade);
+        console.log(n1.valor);
+        console.log(n1.volume);
+
+    </script>
 </body>
 </html>
